# MotifHORDE

./: .gitignore  AUDIT_REPORT.md  README.md  REFACTORING_STRATEGY.md  background.fa  environment.yml  pyproject.toml  pytest.ini  ref.txt  train.fa
hordeMotifs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hordemotifs/: __init__.py  cli.py  comparison.py  discovery.py  evaluation.py  execute.py  external.py  functions.py  io.py  models.py  pipeline.py  ragged.py
hordemotifs/__pycache__/: functions._fast_cj_kernel_numba-632.py312.1.nbc  functions._fast_cj_kernel_numba-632.py312.nbi  functions._fast_cj_kernel_numba-633.py312.1.nbc  functions._fast_cj_kernel_numba-633.py312.nbi  functions._fast_cj_kernel_numba-946.py312.1.nbc  functions._fast_cj_kernel_numba-946.py312.nbi  functions._fast_overlap_kernel_numba-482.py312.1.nbc  functions._fast_overlap_kernel_numba-482.py312.nbi  functions._fast_overlap_kernel_numba-490.py312.1.nbc  functions._fast_overlap_kernel_numba-490.py312.nbi  functions._fast_overlap_kernel_numba-571.py312.1.nbc  functions._fast_overlap_kernel_numba-571.py312.nbi  functions._fast_overlap_kernel_numba-572.py312.1.nbc  functions._fast_overlap_kernel_numba-572.py312.nbi  functions._fast_overlap_kernel_numba-862.py312.1.nbc  functions._fast_overlap_kernel_numba-862.py312.nbi
plans/: cli_style_guide.md
src/hordemotifs/: cache.py  cli.py  discovery.py  external.py  functions.py  io.py  models.py
src/motifhorde/: cache.py  cli.py  comparison.py  discovery.py  execute.py  functions.py  io.py  models.py  pipeline.py
tests/: conftest.py  test_cli_tools.py  test_core_api.py  test_correlation_comparator.py  test_dimont_discovery.py  test_external_fullrun.py  test_external_resolution.py  test_fixtures.py  test_functions.py  test_jstacs_io.py  test_meme_discovery.py  test_motif_comparator.py  test_output.fa  test_pipeline_selection.py  test_pwm_motif.py  test_slim_discovery.py  test_streme_discovery.py  test_tomtom_comparator.py
(+12 files in other folders)
