[project]
name = "hordeMotifs"
version = "0.1.0"
description = ""
authors = [{name = "Anton Tsukanov", email = "tsukanov@bionet.nsc.ru"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy >=1.26,<2.0",
    "numba ~=0.60",
    "scipy >=1.14.1",
    "pandas >=2.2.3",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "ruff>=0.15.0",
]

[project.scripts]
hordeMotifs = "hordemotifs.cli:main_cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hordemotifs = ["bin/*"]
