[project]
name = "motifhorde"
version = "0.1.0"
description = "Motif Harmonized Orchestration for Robust Discovery and Evaluation"
authors = [{name = "Anton Tsukanov", email = "tsukanov@bionet.nsc.ru"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0,<2.4",
    "numba>=0.65.0",
    "scipy >=1.14.1",
    "pandas >=2.2.3",
    "joblib>=1.5.3",
]

[dependency-groups]
dev = [
    "pytest>=7.1.3",
    "ruff>=0.15.0",
]

[project.scripts]
motifhorde = "motifhorde.cli:main_cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
motifhorde = ["bin/*"]
